fix spacing on iphone pt5

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -57,14 +57,13 @@
       justify-content: flex-end;
 
       a {
-        margin-right: 0 !important;
+        margin: 0;
         text-decoration: none;
         display: flex;
         align-items: center;
 
         h5 {
-          margin-bottom: 0;
-          margin-left: 30px;
+          margin: 0 0 0 30px;
         }
       }
     }
@@ -173,6 +172,11 @@
 
         button {
           width: 100px;
+          margin: 20px 0 0 0;
+
+          @media screen and (max-width: $break-small) {
+            margin: 20px auto 15px auto;
+          }
         }
       }
 
